--- a/ltam/modules/web/src/main/webapp/start.xhtml
+++ b/ltam/modules/web/src/main/webapp/start.xhtml
@@ -10,12 +10,8 @@
     <f:event type="preRenderView" listener="#{ltamprofile.preRenderView}"/>
 </f:metadata>
 
-<!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en"> <!--<![endif]-->
+
+<html>
 
 <head>
 
@@ -88,6 +84,13 @@
 
         </div>
     </div>
+    <div class="info-banner">
+        <div class="content">
+            <p>
+                You have left the website of individual(s) who are registered representative of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM’s Symbil Website. The individual(s) of the Affiliate and the Affiliate may receive a referral fee for referring you to this site.  By clicking “Get Started” and using Symbil you consent to electronic delivery of our <a href="https://symbil.com/reports/docs/LTAM-Symbil-Brochure.pdf" id="brochure" target="_blank">brochure </a> with privacy policy.
+            </p>
+        </div>
+    </div>
     <header class="no-bg-header">
         <div class="content">
             <a href="index.html"><img src="images/logo-white@2x.png" width="120px" alt="logo" class="logo"/></a>
@@ -113,10 +116,10 @@
     <div class="cover index">
         <div class="content">
             <div class="clear"></div>
-            <div class="caption home">
+            <div class="caption">
                 <h1>Start building your portfolio today.</h1>
 
-                <p>You are leaving the website of individual(s) who are registered representatives of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM's Symbil Website. The individual(s) of the Affiliate and the Affiliate may receive a referral fee for referring you to this site.</p>
+                <p>Clients have trusted Ladenburg Thalmann Asset Management <br id="slogan"/> to manage over $2 billion of their assets.</p>
                 <a href="#" class="no-bg-button smooth_transition" id="open_popup"><i class="fa fa-play"></i>Watch video</a>
                 <br class="br-buttons"/><br class="br-buttons"/><br class="br-buttons"/>
                 <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
@@ -131,7 +134,7 @@
                         <div class="money_icon"></div>
                         <h2>Simple way to save</h2>
 
-                        <p>In only a few minutes, you’ll be invested in a diversified mutual fund, based on your objectives, and on your way to long-term saving and investing. All online, simple, and seamless.</p>
+                        <p>In only a few minutes, you’ll be invested in a diversified portofolio, based on your objectives, and on your way to long-term saving and investing. All online, simple, and seamless.</p>
                     </div>
                 </li>
                 <li class="col">
@@ -148,7 +151,7 @@
                         <div class="chart_icon"></div>
                         <h2>Constantly managed</h2>
 
-                        <p>The mutual funds available through Symbil are actively managed by experienced investment professionals and tactically adjusted based on changes in the market. We help you plan for your financial future.</p>
+                        <p>The portofolio available through $ymbil are actively managed by experienced investment professionals and tactically adjusted based on changes in the market. We help you plan for your financial future.</p>
                     </div>
                 </li>
                 <li class="clear"></li>
@@ -163,7 +166,7 @@
             <div class="columns right-col">
                 <h2>We help you plan for your financial future.</h2>
 
-                <p>Symbil’s proprietary algorithms incorporate key factors such as age, risk tolerance, goals and time horizon to recommend one of five globally diversified mutual funds. This means your investment is tailored to your needs and goals. The system is simple enough for first time savers, but provides a level of professional investment management that’s required by the most experienced investors, making it an effective tool for anyone.</p>
+                <p>$ymbil’s proprietary algorithms incorporate key factors such as age, risk tolerance, goals and time horizon to recommend one of five globally diversified portofolios. This means your investment is tailored to your needs and goals. The system is simple enough for first time savers, but provides a level of professional investment management that’s required by the most experienced investors.</p>
                 <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
             </div>
             <div class="clear"></div>
@@ -174,7 +177,7 @@
             <div class="columns">
                 <h2>Experts are behind your portfolio.</h2>
 
-                <p>Symbil is managed by Ladenburg Thalmann Asset Management (LTAM), an SEC Registered Investment Advisor, which was established in 1982. LTAM’s dedicated professionals have over 100 years of investment management experience and manage over $2 Billion for clients like you! </p>
+                <p>$ymbil is managed by Ladenburg Thalmann Asset Management (LTAM), an SEC Registered Investment Advisor, which was established in 1982. LTAM’s dedicated professionals have over 100 years of investment management experience and manage over $2 Billion for clients like you! </p>
                 <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
             </div>
             <div class="columns right-col">
@@ -191,7 +194,7 @@
             <div class="columns right-col">
                 <h2>We are serious about security.</h2>
 
-                <p>Symbil uses two Secure Socket Layer (SSL) protocols to encrypt the data you provide to the system. In other words, your personal information is totally secure. </p>
+                <p>$ymbil uses two Secure Socket Layer (SSL) protocols to encrypt the data you provide to the system. In other words, your personal information is totally secure. </p>
                 <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
             </div>
             <div class="clear" id="advisors"></div>
@@ -224,9 +227,9 @@
     </div>-->
     <div class="legal">
         <div class="content">
-            <p>Symbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. Before investing, please review the LTAM
-                <a href="https://symbil.com/reports/docs/LTAM-Symbil-Brochure.pdf">Symbil Disclosure Brochure</a> and applicable <a
-                        href="https://symbil.com/reports/docs/Prospectus.pdf">mutual fund prospectus</a>. Diversification does not ensure profit or protect against loss. The Ladenburg Funds are distributed through Ladenburg Thalmann &amp; Co. Inc., a member of the NYSE_MKT and other principal exchanges,
+            <p>$ymbil is a service of Ladenburg Thalmann Asset Management, Inc. (LTAM) a registered investment adviser. Before investing, please review the LTAM
+                <a href="https://symbil.com/reports/docs/LTAM-Symbil-Brochure.pdf">$ymbil Disclosure Brochure</a> and applicable <a
+                        href="https://symbil.com/reports/docs/Prospectus.pdf">mutual fund prospectus</a> for further information about the Fund’s expenses and other charges. $ymbil does not provide comprehensive investment advice or consider other assets held by clients. LTAM does not exercise any form of discretion over an $ymbil client’s investments. Clients have no obligation to accept any suggestions provided by $ymbil or to invest in any of the Ladenburg Funds. There is no charge for the $ymbil service.  However, LTAM receives fees for managing the five Ladenburg Funds that are recommended through $ymbil. Diversification does not ensure profit or protect against loss. The Ladenburg Funds are distributed through Ladenburg Thalmann &amp; Co. Inc., a member of the NYSE_MKT and other principal exchanges,
                 <a href="http://www.finra.org/">FINRA</a> and <a
                         href="http://www.sipc.org/">SIPC</a>; and through other subsidiaries of Ladenburg Thalmann Financial Services Inc. Ladenburg Thalmann Financial Services Inc. is traded on the NYSE_MKT under the symbol LTS.
                 Not FDIC Insured. • No Bank Guarantee. • May Lose Value</p>
@@ -234,7 +237,7 @@
     </div>
     <footer>
         <div class="content">
-            <div class="copyright">Symbil © 2016</div>
+            <div class="copyright">$ymbil © 2016</div>
             <div class="clear"></div>
         </div>
     </footer>
