--- a/ltam/modules/web/src/main/webapp/static/faq.xhtml
+++ b/ltam/modules/web/src/main/webapp/static/faq.xhtml
@@ -13,145 +13,105 @@
                 <div class="content">
                     <h2>What is $ymbil?</h2>
 
-                    <p>
-                        $ymbil is a dynamic online investment adviser platform that assesses the risk profile of an investor and
-                        recommends a risk-appropriate managed portfolio.
-                    </p>
+                    <p>$ymbil is a dynamic online investment adviser platform that assesses the risk profile of an investor and recommends a risk-appropriate
+                        managed portfolio.</p>
                     <br/><br/>
 
                     <h2>Is this a “robo-advisor” like I’ve heard about?</h2>
 
                     <p>The $ymbil platform is an electronic “robo advisor” program whereby investors can access an online tool that guides them through a quick
-                        questionnaire and suggests an investment in one of the 5 Ladenburg mutual funds. You receive the benefit of investment professionals who
-                        actively manage your Fund once you make the purchase of the Fund. $ymbil utilizes the trusted investment professionals of Ladenburg
+                        questionnaire and suggests an investment in one of the 5 rick appropriate portfolio. You receive the benefit of investment professionals who
+                        actively manage your Fund once you make the purchase of the account. $ymbil utilizes the trusted investment professionals of Ladenburg
                         Thalmann Asset Management to manage your Fund, not an actual robot.</p>
                     <br/><br/>
 
                     <h2>Who can open an account through $ymbil?</h2>
 
-                    <p>
-                        Anyone who is 18 years old or older, holds a permanent U.S. address and is a
-                        legal U.S. resident or U.S. citizen.
-                    </p>
-                    <br/>
-                    <br/>
-
-                    <h2>Is there a minimum amount required to invest?</h2>
-
-                    <p>
-                        Through $ymbil, the minimum investment in the Ladenburg Funds is $500 as an initial investment.
-                    </p>
+                    <p>Anyone who is 18 years old or older, holds a permanent U.S. address and is a legal U.S. resident or U.S. citizen.</p>
                     <br/><br/>
 
-                    <h2>What types of accounts does $ymbil support?</h2>
+                    <h2> Is there a minimum amount required to invest?</h2>
 
-                    <p>
-                        $ymbil currently supports Individual, Joint, Traditional IRA and Roth IRA accounts.
-                    </p>
+                    <p>Through $ymbil, the minimum investment in the Ladenburg Funds is $500 as an initial investment.</p>
                     <br/><br/>
 
-                    <h2>Is there an option for an Automatic Investment Plan?</h2>
+                    <h2> What types of accounts does $ymbil support?</h2>
 
-                    <p>
-                        Yes, the automatic investment plan allows you to make automatic monthly or quarterly investments in your account through a withdrawal from the bank account that you provide on the
-                        account application form. The minimum for the automatic investment plan is $50.
-                    </p>
+                    <p>$ymbil currently supports Individual, Joint, Traditional IRA and Roth IRA accounts.</p>
+                    <br/><br/>
+
+                    <h2> Is there an option for an Automatic Investment Plan?</h2>
+
+                    <p>Yes, the automatic investment plan allows you to make automatic monthly or quarterly investments in your account through a withdrawal
+                        from the bank account that you provide on the account application form. The minimum for the automatic investment plan is $50. </p>
                     <br/><br/>
 
                     <h2>Who is managing my investments through $ymbil?</h2>
 
-                    <p>
-                        $ymbil is provided by Ladenburg Thalmann Asset Management. LTAM’s an SEC Registered Investment Advisory firm established in 1982. LTAM has over $2 billion in assets under management and a dedicated staff of professionals with over 100 years of investment management experience.
-                        To learn more about us, please visit <a href="http://www.ltam.com">www.ltam.com</a>
-                    </p>
-                    <br/><br/>
+                    <p>$ymbil is provided by Ladenburg Thalmann Asset Management. LTAM’s an SEC Registered Investment Advisory firm established in 1982.
+                        LTAM has over $2 billion in assets under management and a dedicated staff of professionals with over 100 years of investment management
+                        experience. To learn more about us, please visit <a href="http://www.ltam.com">www.ltam.com</a></p>
+                    <br/>
+                    <br/>
 
                     <h2>My advisor recommended I use this – how is he/she involved?</h2>
 
-                    <p>
-                        Ladenburg Thalmann Asset Management has long been a trusted source of asset management for the
-                        clients of thousands of independent financial advisors. $ymbil is a simple way for advisors to
-                        provide a solution to clients through a short interactive online process. Your advisor who is a
-                        registered representative of an Affiliate of Ladenburg Thalmann Asset Management, Inc.
-                        (LTAM) and the Affiliate may receive a referral fee for referring you to the $ymbil Website.
+                    <p>Ladenburg Thalmann Asset Management has long been a trusted source of asset management for the clients of thousands of independent
+                        financial advisors. $ymbil is a simple way for advisors to provide a solution to clients through a short interactive online process. Your
+                        advisor who is a registered representative of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and the Affiliate may
+                        receive a referral fee for referring you to the $ymbil Website.</p>
+                    <br/><br/>
+
+                    <h2> What are the investments being recommended through $ymbil?</h2>
+
+                    <p>Through $ymbil you gain access to the Ladenburg Funds, 5 mutual funds actively managed by Ladenburg Thalmann Asset Management with
+                        risk profiles ranging from conservative to aggressive. The funds each offer a complete and globally diversified asset allocation with exposure
+                        to a range of asset classes including equities, fixed income and alternative investments. The particular fund that is recommended to you is
+                        determined by the answers you provide in the $ymbil online questionnaire and is based on your goals, objectives and risk profile. For more
+                        information on the funds go to<a href="http://www.ladenburgfunds.com"> www.ladenburgfunds.com</a></p>
+                    <br/><br/>
+
+                    <h2> How many investments will I see in my $ymbil account?</h2>
+
+                    <p>Your account will be invested in 1 of the 5 Ladenburg mutual funds so you will only see 1 investment in your account. However, through this
+                        single mutual fund, you’ll receive a complete asset allocation through the fund’s underlying investments in equity, fixed income and
+                        alternative investment exchange traded funds (ETFs).</p>
+                    <br/><br/>
+
+                    <h2> Will the asset allocations ever change in the fund I’m invested in? What about things like rebalancing? What does that mean? Do
+                        you do that?</h2>
+
+                    <p>The asset allocations in your portfolio will periodically change for tactical purposes. The underlying foundation of our investment philosophy is the
+                        construction of a globally diversified portfolio based on strategic asset allocation. Strategic asset allocation is a strategy that divides up a
+                        portfolio among major asset classes (equities, bonds, cash equivalents, and alternative investment vehicles) in proportions that are
+                        consistent with an investor's long-term financial goals and objectives, establishing a "base policy mix". This mix of assets is based on
+                        expected rates of return and risk for each asset class. The tactical overlay essentially helps us determine which areas to under or over-weight
+                        based on market conditions. We will make a portfolio change where we can either reduce the risk in the portfolio or potentially add a higher rate of
+                        return, given a certain level of risk. In general, tactical changes tend to occur 2-6 times per year and are based on current market conditions. W Any
+                        changes that we make we will rebalance our Funds accounts for the combination of risk and time.</p>
+                    <br/><br/>
+
+
+                    <h2> What do you charge? What types of fees can I expect?</h2>
+
+                    <p>There is no fee for $ymbil through the process to determine the advice of the recommended fund. Once you decide to purchase the fund,
+                        there are certain expenses and fees that are internal to the Ladenburg mutual funds. LTAM, as the manager of the Funds, receives 0.50%
+                        annually, on the assets managed in the Ladenburg Funds for their active portfolio management within the Funds. This fee and certain other
+                        expenses mentioned above are taken from the fund before any performance is reported. We believe that our portfolios balance cost-
+                        effectiveness and performance with access to top investment management professionals. For information about all the fees and expenses
+                        associated with the Ladenburg Funds, please refer to the Funds’ prospectus, which can be obtained by calling 1-877-803-6583 or by visiting
+                        <a href="http://www.ladenburgfunds.com"> www.ladenburgfunds.com</a></p>
+                    <br/><br/>
+
+
+                    <h2> What is the next step after creating an account?</h2>
+
+                    <p>You will be sent an e-mail to set up an account. Once registered you can access your account through <a
+                            href="http://www.symbil.com">www.symbil.com</a> website by selecting “sign in” or download the $ymbil app from the Apple Store or Google Play Store. From their secure portal you will be able to review your
+                        account’s performance, make updates or changes, and add more funds at your discretion.
                     </p>
                     <br/><br/>
 
-                    <h2>What are the investments being recommended through $ymbil?</h2>
-
-                    <p>
-                        Through $ymbil you gain access to the Ladenburg Funds, 5 mutual funds
-                        actively managed by Ladenburg Thalmann Asset Management with risk
-                        profiles ranging from conservative to aggressive. The funds each offer a
-                        complete and globally diversified asset allocation with exposure to a
-                        range of asset classes including equities, fixed income and alternative
-                        investments. The particular fund that is recommended to you is
-                        determined by the answers you provide in the $ymbil online questionnaire
-                        and is based on your goals, objectives and risk profile. For more
-                        information on the funds go to <a href="http://www.ladenburgfunds.com">www.ladenburgfunds.com</a>
-                    </p>
-                    <br/><br/>
-
-                    <h2>How many investments will I see in my $ymbil account?</h2>
-
-                    <p>
-                        Your account will be invested in 1 of the 5 Ladenburg mutual funds so you will only see 1
-                        investment in your account. However, through this single mutual fund, you’ll receive a complete
-                        asset allocation through the fund’s underlying investments in equity, fixed income and
-                        alternative investment exchange traded funds (ETFs).
-                    </p>
-                    <br/><br/>
-
-                    <h2>Will the asset allocations ever change in the fund I’m invested in? What about things like rebalancing? What does that mean? Do you do that?</h2>
-
-                    <p>
-                        The asset allocations in your portfolio will periodically change for
-                        tactical purposes. The underlying foundation of our investment
-                        philosophy is the construction of a globally diversified portfolio
-                        based on strategic asset allocation. Strategic asset allocation is a
-                        strategy that divides up a portfolio among major asset classes
-                        (equities, bonds, cash equivalents, and alternative investment vehicles)
-                        in proportions that are consistent with an investor's long-term
-                        financial goals and objectives, establishing a "base policy mix".
-                        This mix of assets is based on expected rates of return and risk for
-                        each asset class. The tactical overlay essentially helps us determine
-                        which areas to under or over-weight based on market conditions. We will
-                        make a portfolio change where we can either reduce the risk in the
-                        portfolio or potentially add a higher rate of return, given a certain
-                        level of risk. In general, tactical changes tend to occur 2-6 times per
-                        year and are based on current market conditions. Any changes that we
-                        make we will rebalance our Funds according to current market conditions,
-                        but maintain our original foundation that accounts for the combination
-                        of risk and time.
-                    </p>
-                    <br/><br/>
-
-                    <h2>What do you charge? What types of fees can I expect?</h2>
-
-                    <p>
-                        There is no fee for $ymbil through the process to determine the advice of the recommended fund.
-                        Once you decide to purchase the fund, there are certain expenses and fees that are internal to
-                        the Ladenburg mutual funds. LTAM, as the manager of the Funds, receives 0.50% annually, on the
-                        assets managed in the Ladenburg Funds for their active portfolio management within the Funds.
-                        This fee and certain other expenses mentioned above are taken from the fund before any performance
-                        is reported. We believe that our portfolios balance cost-effectiveness and performance with access
-                        to top investment management professionals. For information about all the fees and expenses
-                        associated with the Ladenburg Funds, please refer to the Funds’
-                        <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf">prospectus</a>, which can be
-                        obtained by calling 1-877-803-6583 or by visiting <a href="http://www.ladenburgfunds.com">www.ladenburgfunds.com</a>
-                    </p>
-                    <br/><br/>
-                    <h2>What is the next step after creating an account?</h2>
-
-                    <p>
-                    You will be sent an e-mail to set up an account. Once registered you can access
-                        your account through <a href="http://www.symbil.com">www.symbil.com</a>
-                        website by selecting “sign in” or download
-                        the $ymbil app from the Apple Store or Google Play Store. From their secure
-                        portal you will be able to review your account’s performance, make updates or
-                        changes, and add more funds at your discretion.
-                    </p>
-                    <br/><br/>
 
                 </div>
             </div>
