--- a/ltam/modules/web/src/main/webapp/start.xhtml
+++ b/ltam/modules/web/src/main/webapp/start.xhtml
@@ -1,15 +1,14 @@
 ﻿<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
+                   xmlns:h="http://java.sun.com/jsf/html"
+                   xmlns:f="http://java.sun.com/jsf/core"
+                   xmlns:ui="http://java.sun.com/jsf/facelets"
+                   xmlns:p="http://primefaces.org/ui">
 
 <f:metadata>
     <f:viewParam name="advisor" value="#{ltamprofile.beanAdvisor}"/>
     <f:viewParam name="rep" value="#{ltamprofile.beanRep}"/>
     <f:event type="preRenderView" listener="#{ltamprofile.preRenderView}"/>
 </f:metadata>
-
 
 <html>
 
@@ -18,7 +17,7 @@
     <!-- Basic Page Needs
   ================================================== -->
     <meta charset="utf-8"/>
-    <title>Symbil</title>
+    <title>$ymbil</title>
     <meta name="description" content="Start building your portfolio today"/>
     <meta name="author" content="gregoire vella"/>
     <meta name="keywords" content="Investments"/>
