--- a/ltam/modules/web/src/main/webapp/static/faq.xhtml
+++ b/ltam/modules/web/src/main/webapp/static/faq.xhtml
@@ -20,7 +20,7 @@
                     <h2>Is this a “robo-advisor” like I’ve heard about?</h2>
 
                     <p>The $ymbil platform is an electronic “robo advisor” program whereby investors can access an online tool that guides them through a quick
-                        questionnaire and suggests an investment in one of the 5 rick appropriate portfolio. You receive the benefit of investment professionals who
+                        questionnaire and suggests an investment in one of the 5 risk appropriate portfolios. You receive the benefit of investment professionals who
                         actively manage your Fund once you make the purchase of the account. $ymbil utilizes the trusted investment professionals of Ladenburg
                         Thalmann Asset Management to manage your Fund, not an actual robot.</p>
                     <br/><br/>
@@ -87,7 +87,7 @@
                         consistent with an investor's long-term financial goals and objectives, establishing a "base policy mix". This mix of assets is based on
                         expected rates of return and risk for each asset class. The tactical overlay essentially helps us determine which areas to under or over-weight
                         based on market conditions. We will make a portfolio change where we can either reduce the risk in the portfolio or potentially add a higher rate of
-                        return, given a certain level of risk. In general, tactical changes tend to occur 2-6 times per year and are based on current market conditions. W Any
+                        return, given a certain level of risk. In general, tactical changes tend to occur 2-6 times per year and are based on current market conditions.  Any
                         changes that we make we will rebalance our Funds accounts for the combination of risk and time.</p>
                     <br/><br/>
 
