--- a/invessence/modules/web/src/main/webapp/pages/consumer/cadd.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cadd.xhtml
@@ -13,14 +13,15 @@
 
 <ui:define name="content">
 <h:outputScript name="js/invCharts.js" library="spark-layout"/>
+
 <!-- BOX START -->
 <h:form id="ceForm">
 <p:growl id="caddgrowl" showDetail="true" sticky="true" escape="true"/>
 
 <div class="layout-portlets-box">
-    <p:panel id="dPanel1" class="h1">
+    <p:panel id="dPanel1" style="height:85px">
 
-        <div class="Container33 hide-mobile" style="margin-top: -5px"><!-- ROHIT's CHANGE -->
+        <div class="Container33 hide-mobile" style="margin-top: -5px">
             <div class="ContainerIndent">
                 <div class="DispInlBlock">
                     <div class="Container100">
@@ -122,7 +123,7 @@
                         </div>
                         <div class="Container50 TexAlCenter Fs20">
                             <h:inputHidden id="allocValue" value="#{cepb.allocationIndex}"/>
-                            <p:slider id="allocSlider" for="allocValue" minValue="0" maxValue="79" step="1">
+                            <p:slider id="allocSlider" for="allocValue" minValue="0" maxValue="#{cepb.maxAssetAllocatonPoints}" step="1">
                                 <p:ajax event="slideEnd"
                                         update=":ceForm:workArea, :ceForm:graphArea"
                                         listener="#{cepb.onAllocSlider}"/>
@@ -166,7 +167,7 @@
                                  value="#{cepb.editableAsset}"
                                  var="assetList">
 
-                        <p:column style="width:1%; background-color: #{assetList.color};">
+                        <p:column style="width: 1%; background-color: #{assetList.color};">
                             <h:outputText value=" "/>
                         </p:column>
 
@@ -235,7 +236,7 @@
                         </div>
                         <div class="Container50 TexAlCenter Fs20">
                             <h:inputHidden id="portfolioValue" value="#{cepb.portfolioIndex}"/>
-                            <p:slider id="portfolioSlider" for="portfolioValue" minValue="0" maxValue="100" step="1">
+                            <p:slider id="portfolioSlider" for="portfolioValue" minValue="0" maxValue="#{cepb.maxPortfolioAllocationPoints}" step="1">
                                 <p:ajax event="slideEnd"
                                         update=":ceForm:workArea, :ceForm:graphArea"
                                         listener="#{cepb.onPortfolioSlider}"/>
@@ -334,32 +335,18 @@
         </div>
     </div>
 </p:fieldset>
-<p:fieldset legend="Goal Planning" rendered="false"
+<p:fieldset legend="Goal Planning" rendered="#{!cepb.fixedModel}"
+            collapsed="true"
             toggleable="true" toggleSpeed="500">
     <div class="Container100 Responsive100">
         <div class="ContainerIndent">
             <div class="Wid50 Responsive50 Fleft">
                 <h3 class="BigTopic">
-                    Goals Detail
+                    Setting Goals
                 </h3>
             </div>
-            <div class="Wid50 Responsive50 Fleft"><!-- ROHIT's CHANGE -->
+            <div class="Wid50 Responsive50 Fleft">
                 <div class="ContainerIndent">
-
-                    <div class="Wid35 BorderedBox Fright TexAlCenter Mar10">
-                        <div class="ContainerIndent">
-                            <div class="EmptyBox5"></div>
-                            <span class="Fs14 DispBlock gray">Goal Desired</span>
-                               <span class="Fs24 DispBlock red">
-                             <h:outputText value="#{cepb.goalData.goalDesired}">
-                                 <f:convertNumber pattern="$###,###,###"/>
-                             </h:outputText>
-                                  </span>
-
-                            <div class="EmptyBox5"></div>
-                        </div>
-                    </div>
-
 
                     <div class="Wid25 BorderedBox Fright TexAlCenter Mar10">
                         <div class="ContainerIndent">
@@ -374,7 +361,6 @@
                             <div class="EmptyBox5"></div>
                         </div>
                     </div>
-
 
                     <div class="Wid25 BorderedBox Fright TexAlCenter Mar10">
                         <div class="ContainerIndent">
@@ -395,15 +381,93 @@
         </div>
     </div>
 
-    <div class="Container100 Responsive100">
-        <div class="ContainerIndent">
-            <p:outputPanel deferred="true">
-                <p:chart type="line" model="#{cepb.charts.lineChart}"
-                         rendered="#{cepb.charts.lineChart != null}"
-                         responsive="true"/>
-            </p:outputPanel>
+    <div class="Container100">
+        <div class="Container50 Fleft Responsive100">
+            <div class="ContainerIndent">
+                <p:panel id="goalEntryArea" style="border:0px !important; background:none;">
+                    <div class="EmptyBox20"></div>
+                    <p:panelGrid columns="3" layout="grid"
+                                 styleClass="Container100 Responsive50"
+                                 style="border:0px !important; background:none;"
+                                 class="FormContent">
+                        <div class="Wid90">Desired Goal</div>
+                        <pe:inputNumber style="width: 80px"
+                                        value="#{cepb.goalData.goalDesired}"
+                                        maxlength="11" decimalPlaces="0" symbol="$">
+                        </pe:inputNumber>
+                        <p:spacer width="1"/>
+
+                        <div class="Wid90">Number of years when needed</div>
+                        <p:spinner value="#{cepb.horizon}" styleClass="Fix80Spinner"
+                                   min="1" max="40" stepFactor="1">
+                        </p:spinner>
+                        <p:spacer width="1"/>
+
+                        <div class="Wid90">Initial investment</div>
+                        <h:outputText value="#{cepb.initialInvestment}">
+                            <f:convertNumber currencySymbol="$" type="currency"/>
+                        </h:outputText>
+                        <p:spacer width="1"/>
+
+                        <div class="Wid90">Recurring investment</div>
+                        <pe:inputNumber style="width: 80px"
+                                        value="#{cepb.recurringInvestment}"
+                                        maxlength="11" decimalPlaces="0" symbol="$">
+                            <p:ajax event="blur" listener="#{cepb.onChange}"
+                                    update=":ceForm:workArea, :ceForm:graphArea"/>
+                        </pe:inputNumber>
+                        <h:outputText style="margin-left: 10px; color: red; font-weight: bold"
+                                      rendered="#{cepb.goalAdjustment > 0}"
+                                      value="#{cepb.goalAdjustment}">
+                        </h:outputText>
+
+                        <div class="Wid90"></div>
+                        <p:commandButton id="calcButton" value="Calculate" actionListener="#{cepb.calculateGoal}"
+                                         update="ceForm:goalEntryArea, :ceForm:goalgraphArea"/>
+                        <p:spacer width="1"/>
+
+
+                    </p:panelGrid>
+
+                </p:panel>
+            </div>
         </div>
+        <div class="Container50 Fleft Responsive100">
+            <div class="ContainerIndent">
+                <p:panel id="goalgraphArea" style="border: 0px">
+                    <div class="Container100 Responsive100">
+                        <p:outputPanel id="goalcharts" style="border: 0px" rendered="#{cepb.goalData.goalDesired > 0}">
+                            <p:panel style="border: 0px">
+                                <div class="Container100 Responsive">
+                                    <div class="ContainerIndent">
+                                        <p:outputPanel deferred="true" style="border: 0px" styleClass="TexAlCenter">
+                                            <h:outputText value="Great, you'll reach this goal."
+                                                          rendered="#{cepb.goalData.reachable}"
+                                                          style="font-size: 1.2em; color: green">
+                                            </h:outputText>
+                                            <h:outputText value="To reach your goal, increase recurring amount as shown."
+                                                          rendered="#{! cepb.goalData.reachable}"
+                                                          style="font-size: 1.2em; color: red">
+                                            </h:outputText>
+                                        </p:outputPanel>
+                                    </div>
+                                </div>
+                                <div class="Container100  Fleft">
+                                    <div class="Container100">
+                                        <p:chart type="line" model="#{cepb.charts.goalChart}"
+                                                 rendered="#{cepb.charts.goalChart != null}"
+                                                 responsive="true"/>
+                                    </div>
+                                </div>
+                            </p:panel>
+                        </p:outputPanel>
+                    </div>
+                </p:panel>
+            </div>
+        </div>
+
     </div>
+
 </p:fieldset>
 </p:outputPanel>
 <!-- BOX END -->
