Invessence 4 & 5 tickect updation

--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
@@ -140,8 +140,8 @@
         </div>
     </div>
 
-    <div class="Container100 Responsive50">
-        <p style="font-style: italic; font-size: .8em;">
+    <div class="Container100">
+        <p style="font-style: italic; font-size: .8em; text-align:justify">
             This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
             (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
             It does not take in affect any tax withholdings or distributions.
